# Machitare

./: .gitignore  README.md  pyproject.toml  run
docs/: Benchmarking.md
machitare/: __main__.py  agent.py  bench.py  channel.py  client.py  node.py  server.py  streaming_pb2.py
proto/: streaming.proto
