[tool.poetry]
name = "machitare"
version = "0.1.0"
description = "Machitare is an innovative agent creation framework designed to revolutionize the way agents are built and deployed."
authors = ["SwiftyOS <craigswift13@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Swiftyos/Machitare"


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.3"
anthropic = "^0.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
