[tool.poetry]
name = "machitare"
version = "0.1.0"
description = "Machitare is an innovative agent creation framework designed to revolutionize the way agents are built and deployed."
authors = ["SwiftyOS <craigswift13@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Swiftyos/Machitare"


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.3"
anthropic = "^0.21.3"
protobuf = "^5.26.1"
simpleaudio = "^1.0.4"
pyaudio = "^0.2.14"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
